fix: 代码审查修复 — 剧本创作模块M1-M5全部12项问题
Critical (4):
- 修复10个Entity @TableName与实际DDL表名不匹配，同时修正LCreative_LStrategys拼写错误
- 为5个Controller添加项目级访问控制(ProjectAccessService)，40+端点已保护
- ContentBatchController幂等键改为确定性键(projectId+jobType+sorted unitIds)
- StoryboardService竞态条件：改删除重建为复用已有Master行

Important (7):
- 新建AiResponseParser共享工具类，消除7个Service中约200行重复代码
- parseJson失败时记录WARN日志并返回_parse_error/_raw键
- ContentHookService AI prompt增加next_promise第7种钩子类型
- WorldbuildingService.getNextSort实现真实MAX(sort_order)+1查询
- ContinuityService.compareSnapshots扩展为检查角色+关系+道具+伏笔4项
- TvcService String.formatted()替换为String.format()(Java 8+兼容)
- CanvasBridgeService shorterDuration重命名为toMillis
- ContinuityService.checkConflicts O(n²)修复，用prevUnit替代indexOf()
- AiResponseParser注入全部7个Service，消除重复代码和静默错误吞没

Minor (1):
- PromotionService硬编码用户1L改为SecurityUtil.getCurrentUserId()

验证: mvn clean compile ✅ | mvn test 32 passed ✅